@@ -24,6 +24,9 @@ New Features
   implemented in the spatial module as DateRangePrefixTree used with
   NumberRangePrefixTreeStrategy. (David Smiley)
 
+* LUCENE-5739: Added DataInput.readZ(Int|Long) and DataOutput.writeZ(Int|Long)
+  to read and write small signed integers. (Adrien Grand)
+
 API Changes
 
 * LUCENE-4535: oal.util.FilterIterator is now an internal API.
